# audiotool

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  notes.md
crates/audiotool/: Cargo.toml
crates/audiotool-cli/: Cargo.toml
crates/audiotool-cli/src/: ctrlc.rs  main.rs
crates/audiotool-gui/: Cargo.toml
crates/audiotool-gui/src/: main.rs
crates/audiotool/src/: bitdepth.rs  codecs.rs  convert.rs  io.rs  lib.rs  samplerate.rs  split.rs  testsupport.rs  types.rs
crates/audiotool/src/codecs/: flac.rs  vorbis.rs  wav.rs
crates/audiotool/tests/: test_bitdepth.rs  test_convert.rs  test_convert_parameterized.rs  tests.proptest-regressions  tests.rs
