[workspace.package]
description = "todo"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
authors = ["Brian Anderson <andersrb@gmail.com>"]
documentation = "todo"
edition = "2021"

[workspace]
resolver = "2"

members = [
  "crates/*",
]

default-members = [
  "crates/audiotool-cli",
]

[workspace.dependencies]
rx.path = "../rustmax/crates/rustmax"
rx.package = "rustmax"
rx.features = [
  "rmx-profile-std",
  "rmx-profile-cli",
  "rmx-feature-derive",
  "rmx-feature-serde",
]
