[workspace.package]
description = "todo"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
authors = ["Brian Anderson <andersrb@gmail.com>"]
documentation = "todo"
edition = "2024"

[workspace]
resolver = "2"

members = [
  "crates/*",
]

default-members = [
  "crates/audiotool-cli",
]

[workspace.dependencies]
rmx.path = "../rustmax/crates/rustmax"
rmx.package = "rustmax"
rmx.features = [
  "rmx-profile-std",
  "rmx-profile-cli",
  "rmx-feature-derive",
  "rmx-feature-serde",
]
