[workspace.package]
description = "Audio format conversion tool"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
authors = ["Brian Anderson <andersrb@gmail.com>"]
repository = "https://github.com/brson/audiotool"
edition = "2024"

[workspace]
resolver = "2"

members = [
  "crates/*",
]

default-members = [
  "crates/audiotool-cli",
]

[workspace.dependencies]
rmx.version = "0.0.8"
rmx.package = "rustmax"
rmx.features = [
  "rmx-profile-std",
  "rmx-profile-cli",
  "rmx-feature-derive",
  "rmx-feature-serde",
]
