[package]
name = "audiotool-gui"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
audiotool.path = "../audiotool"
rx.workspace = true
rx.features = [
  "rx-profile-std",
]
slint = "1.3.2"

[[bin]]
name = "audiotool-gui"
path = "src/main.rs"
test = false
