[package]
name = "audiotool"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
test = false

[dependencies]
rx.workspace = true
rx.features = [
]
serde = "1"

hound = "3.5.1"
libflac-sys = "0.3.0"
rand_distr = "0.4.3"
libsamplerate-sys = "0.1.12"
