[package]
name = "audiotool"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
test = false
doctest = false

[dependencies]
rx.workspace = true
rx.features = [
]
serde = "1"

hound = "3.5.1"
libflac-sys = "0.3.0"
rand_distr = "0.4.3"
libsamplerate-sys = "0.1.12"
ogg_next_sys = "0.1.3"

[dev-dependencies]
libtest-mimic = "0.6.1"

[[test]]
name = "test_convert_parameterized"
path = "tests/test_convert_parameterized.rs"
harness = false